# simulRenta

./: Dockerfile  README.md  pyproject.toml
src/: SimulRenta.ipynb  SimulRenta.py  utils.py
